--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
     <title>My app</title>
     <meta charset="UTF-8" />
     <base href="/">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-  <body>
+  <body class="mat-typography">
     <app-root>Loading...</app-root>
   </body>
 </html>
